# NdimSpline_JAX

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SplineCoefs_from_GriddedData.py  benchmark.py  caller.ipynb  caller.py  caller_new.py  installation_guide.md  pyproject.toml  technical_note_theory.md
docs/: theory_note.tex
jupyter_notebooks/: 1D_spline_v3_JAX.ipynb  2D_spline_v3_JAX.ipynb  3D_spline_v3_JAX.ipynb  4D_spline_v3_JAX.ipynb  5D_spline_v3_JAX.ipynb
ndim_spline_jax/: __init__.py  interpolant.py  tdma.py
tests/: test_interpolant.py  test_tdma.py
