[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ndim-spline-jax"
version = "1.0.1"
description = "N-dimensional natural cubic spline interpolation with JAX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nobuhiro Moteki", email = "nobuhiro.moteki@gmail.com" },
]
dependencies = [
    "jax>=0.4.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["ndim_spline_jax*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
